--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="city">City</string>
     <string name="login">Login</string>
     <string name="register">Register</string>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
